fix sticky header, spacing issues, header look, tim is a bull in a china shop!

--- a/themes/ciata-theme/assets/sass/_nav.scss
+++ b/themes/ciata-theme/assets/sass/_nav.scss
@@ -95,7 +95,7 @@ h2 a:hover {
       padding-top: 1rem;
       ul {
   			display: flex;
-        //padding-left: 10rem;
+
   			li {
   				padding-right: 1rem;
   			 	width: auto;
@@ -104,4 +104,14 @@ h2 a:hover {
   		}
   	}
   }
+}
+
+.main-navigation .nav-lang {
+	a {
+		color: #5697ff;
+	}
+
+	a:hover {
+		color: $ciata__dark-blue;
+	}
 }
